--- a/src/main/webapp/WEB-INF/templates/default.xhtml
+++ b/src/main/webapp/WEB-INF/templates/default.xhtml
@@ -27,7 +27,10 @@
 <h:body>
     <div id="container">
         <div class="dualbrand">
-            <img src="resources/gfx/dualbrand_logo.png" />
+            <img src="https://fbcdn-sphotos-e-a.akamaihd.net/hphotos-ak-ash4/225586_121629094582951_1427288_n.jpg"
+                 alt="Surfing ry logo" width="100" height="100" />
+            <img src="https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-snc7/394382_347494188663106_213614575_n.jpg"
+            alt="Mellstenin ranta" width="600" height="200" />
         </div>
         <div id="content">
             <ui:insert name="content">
@@ -35,25 +38,18 @@
          </ui:insert>
         </div>
         <div id="aside">
-            <p>Learn more about JBoss Enterprise Application
-                Platform 6.</p>
+            <h2>Linkkejä:</h2>
             <ul>
-                <li><a href="https://access.redhat.com/knowledge/docs/JBoss_Enterprise_Application_Platform/">Documentation</a></li>
-                <li><a href="http://red.ht/jbeap-6">Product Information</a></li>
-            </ul>
-            <p>Learn more about JBoss AS 7.</p>
-            <ul>
-                <li><a
-                    href="http://www.jboss.org/jdf/quickstarts/jboss-as-quickstart/guide/Introduction">Getting
-                        Started Developing Applications Guide</a></li>
-                <li><a href="http://jboss.org/jbossas">Community
-                        Project Information</a></li>
+                <li><a href="http://www.surfing-ry.org/">Seuran kotisivut</a></li>
+                <li><a href="http://www.surfing-ry.org/Alkeiskurssit">Alkeiskurssit</a></li>
+                <li><a href="http://www.surfing-ry.org/Home/yhteiskayttoevaelineet">Yhteiset välineet</a>
+                ja niiden
+                <a href="http://www.surfing-ry.org/varauskirja">varauskirja</a></li>
             </ul>
         </div>
         <div id="footer">
             <p>
-                This project was generated from a Maven archetype from
-                JBoss.<br />
+                Surfing ry<br />
             </p>
         </div>
     </div>
